# OBME

./: .gitignore  CMakeLists.txt  README.md  obme.cpp  obme.h  test.cpp  test_floats.cpp  test_integers.cpp  test_primitives.cpp  test_score.cpp  test_text.cpp
mersenne/: mersenne.c  mersenne.h
